cambios en css xd

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             desde ese entonces,fue en ese momento donde en los cambios de balance se vio que la AC80 fue 
             brutalmente nerfeada y paso a ser de los mejores rifles de tirador a uno cercano a la SKS.</p>
     </div>
+    <script src="wuevo.js"></script>
     </main>
 </body>
 </html>
